Fix to background image sizing on Firefox

--- a/css/frontsize-less-2.0.0/themes/default/widgets/grusp-logo-full.less
+++ b/css/frontsize-less-2.0.0/themes/default/widgets/grusp-logo-full.less
@@ -2,13 +2,14 @@
     .backgroundImage("grusp-logo-full.svg");
     background-repeat   : no-repeat;
     background-position : 50% 100%;
-    background-size     : 100% 100%;
+    background-size     : contain;
     min-height          : 410px;
     padding-top         : @global-step;
 }
 
 @media @till-smartphone-landscape {
     .grusp-logo-full {
-        background-size : 90% 90%;
+        padding-left  : @global-step;
+        padding-right : @global-step;
     }
 }
